feat: simulate transfer of encrypted data

--- a/project/canteen/templates/encryption.html
+++ b/project/canteen/templates/encryption.html
@@ -11,7 +11,7 @@
     <div>{{ orig_data }}</div>
 
     <h3>Encrypted data</h3>
-    <div>{{ encrypted_data }}</div>
+    <div style="word-break: break-all">{{ encrypted_data }}</div>
 
     <h3>Encrypted symmetric key</h3>
     <div style="word-break: break-all">{{ encrypted_symmetric_key }}</div>
