--- a/project/users/templates/users/base.html
+++ b/project/users/templates/users/base.html
@@ -31,8 +31,8 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarEncryptionMenu">
                             <a class="dropdown-item" href="{% url 'encryption-upload-pub-key' %}">Upload Public Key</a>
-                            <a class="dropdown-item" href="#">Decrypt with Private Key</a>
-                            <a class="dropdown-item" href="#">Generate RSA Keys</a>
+                            <a class="dropdown-item" href="{% url 'encryption-upload-pub-key' %}">Decrypt with Private Key</a>
+                            <a class="dropdown-item" href="{% url 'encryption-gen-rsa-keys' %}">Generate RSA Keys</a>
                         </div>
                     </li>
                 </ul>
