--- a/project/users/templates/users/home.html
+++ b/project/users/templates/users/home.html
@@ -2,17 +2,22 @@
 {% block title %} Home Page {% endblock title%}
 {% block content %}
     <div class="jumbotron">
-        <h1 class="display-4">Welcome, {{user.first_name.title|default:'Guest'}}</h1>
-        <p class="lead">
-            This is <b>user registration and login system</b> build with django which is
-            a Python-based free and open-source web framework that follows the model–template–views architectural pattern.
-        </p>
-        <hr class="my-4">
-        <p class="lead">
+        <h1 class="display-4">Vitaj, {{user.first_name.title|default:'návštevník'}}</h1>
+        
             {% if user.is_authenticated %}
-                <a class="btn btn-primary btn-lg" href="{% url 'logout' %}" role="button">Logout</a>
+                <p class="lead">
+                    Ako prihlásený používateľ môžeš požiadať o šifrovanú správu
+                </p>
+                <hr class="my-4">
+                <p class="lead">
+                <a class="btn btn-primary btn-lg" href="{% url 'logout' %}" role="button">Odhlásiť sa</a>
             {% else %}
-                <a class="btn btn-primary btn-lg" href="{% url 'login' %}" role="button">Sign in</a>
+                <p class="lead">
+                    Pred používaním aplikácie je potrebné prihlásenie
+                </p>
+                <hr class="my-4">
+                <p class="lead">
+                <a class="btn btn-primary btn-lg" href="{% url 'login' %}" role="button">Prihlásiť sa</a>
             {% endif %}
         </p>
     </div>
