--- a/project/users/templates/users/login.html
+++ b/project/users/templates/users/login.html
@@ -7,7 +7,7 @@
                 <div class="col-lg-5">
                     <div class="card shadow-lg border-0 rounded-lg mt-0 mb-3">
                         <div class="card-header justify-content-center">
-                          <h3 class="font-weight-light my-1 text-center">Sign In</h3>
+                          <h3 class="font-weight-light my-1 text-center">Prihlásenie</h3>
                         </div>
                         {% if form.errors %}
                             <div class="alert alert-danger alert-dismissible" role="alert">
@@ -27,7 +27,7 @@
                                 <div class="form-row">
                                     <div class="col-md-10 offset-md-1">
                                         <div class="form-group">
-                                            <label class="small mb-1">Username</label>
+                                            <label class="small mb-1">Používateľské meno</label>
                                             {{ form.username }}
                                         </div>
                                     </div>
@@ -35,7 +35,7 @@
                                 <div class="form-row">
                                     <div class="col-md-10 offset-md-1">
                                         <div class="form-group">
-                                          <label class="small mb-1">Password</label>
+                                          <label class="small mb-1">Heslo</label>
                                           {{ form.password }}
                                         </div>
                                     </div>
@@ -52,7 +52,7 @@
                                 <div class="form-row">
                                     <div class="col-md-10 offset-md-1">
                                         <div class="form-group mt-0 mb-1">
-                                          <button name="login" class="col-md-12 btn btn-dark" id="login">Sign in</button>
+                                          <button name="login" class="col-md-12 btn btn-dark" id="login">Prihlásiť sa</button>
                                         </div>
                                     </div>
                                 </div>
@@ -60,7 +60,7 @@
                         </div>
                         <div class="card-footer text-center">
                             <div class="small">
-                                <a href="{% url 'users-register' %}">Don't have an account yet? Go to signup</a><br>
+                                <a href="{% url 'users-register' %}">Nemáte účet? Zaregistrujte sa!</a><br>
                             </div>
                         </div>
                     </div>
