--- a/project/users/templates/users/logout.html
+++ b/project/users/templates/users/logout.html
@@ -3,11 +3,11 @@
 {% block content %}
     <div class="card" style="width: 18rem;">
         <div class="card-body">
-        <h5 class="card-title">You have been logged out</h5>
+        <h5 class="card-title">Odhlásenie prebehlo úspešne</h5>
         <p class="card-text">
-            Thanks for your time, contact me for any comments or suggestions using my email address.
+            Ako odhlásený používateľ môžete bezpečne zavrieť stránku alebo sa znova prihlásiť
         </p>
-        <br><hr><a href="{% url 'login' %}" class="btn btn-primary">Sign in again</a>
+        <br><hr><a href="{% url 'login' %}" class="btn btn-primary">Znova sa prihlásiť</a>
         </div>
     </div>
 
