--- a/project/canteen/templates/canteen/gen_rsa_keys.html
+++ b/project/canteen/templates/canteen/gen_rsa_keys.html
@@ -1,13 +1,13 @@
 {% extends "users/base.html" %}
-{% block title %} Upload Public Key {% endblock title %}
+{% block title %} Key Pair Generation {% endblock title %}
 {% block content %}
 
 <script src="/static/canteen/client.js"></script>
 <div>
     <button id="generateKey">Generate Keys</button>
+    <button id="downloadPrivateKey" style="display: none;">Download Private Key</button>
     <button id="sendKey" style="display: none;">Send Public Key</button>
     <pre id="publicKeyDisplay"></pre>
-    <pre id="decryptedDataDisplay"></pre>
 </div>
 
 <script>
@@ -16,35 +16,62 @@
         const pem = document.getElementById('publicKeyDisplay').textContent;
         sendPublicKeyToServer(pem);
     });
+    document.getElementById('downloadPrivateKey').addEventListener('click', function() {
+        const pem = document.getElementById('downloadPrivateKey').getAttribute('data-pem');
+        downloadPrivateKey(pem);
+    });
 
     function generateAndSendKeys() {
-    window.crypto.subtle.generateKey(
-        {
-            name: "RSA-OAEP",
-            modulusLength: 2048, // can be 1024, 2048, or 4096
-            publicExponent: new Uint8Array([0x01, 0x00, 0x01]), // 65537
-            hash: {name: "SHA-256"} // can be "SHA-1", "SHA-256", "SHA-384", or "SHA-512"
-        },
-        true, // whether the key is extractable (i.e., can be used in exportKey)
-        ["encrypt", "decrypt"] // must be ["encrypt", "decrypt"] or ["wrapKey", "unwrapKey"]
-    )
-    .then(function(keyPair){
-        // Returns a keypair object with publicKey and privateKey
-        // Expose the private key to the window object (not recommended for production! See note below)
-        window.privateKey = keyPair.privateKey;
-        return exportPublicKey(keyPair.publicKey);
-    })
-    .then(function(pem) {
-        document.getElementById('publicKeyDisplay').textContent = pem;
-        document.getElementById('sendKey').style.display = 'block';
-    })
-    .catch(function(err) {
-        console.error(err);
-    });
+        window.crypto.subtle.generateKey(
+            {
+                name: "RSA-OAEP",
+                modulusLength: 2048,
+                publicExponent: new Uint8Array([0x01, 0x00, 0x01]),
+                hash: {name: "SHA-256"}
+            },
+            true,
+            ["encrypt", "decrypt"]
+        )
+        .then(function(keyPair){
+            window.privateKey = keyPair.privateKey;
+            return Promise.all([
+                exportPublicKey(keyPair.publicKey),
+                exportPrivateKey(keyPair.privateKey)
+            ]);
+        })
+        .then(function([publicPem, privatePem]) {
+            document.getElementById('publicKeyDisplay').textContent = publicPem;
+            document.getElementById('sendKey').style.display = 'block';
+
+            // Store the private key PEM in the download button's data attribute
+            let downloadBtn = document.getElementById('downloadPrivateKey');
+            downloadBtn.setAttribute('data-pem', privatePem);
+            downloadBtn.style.display = 'block';
+        })
+        .catch(function(err) {
+            console.error(err);
+        });
+    }
+
+    function downloadPrivateKey(pem) {
+    const element = document.createElement('a');
+    element.setAttribute('href', 'data:application/octet-stream;charset=utf-8,' + encodeURIComponent(pem));
+    element.setAttribute('download', 'private_key.pem');
+
+    // Prevent private key from lingering in the DOM
+    element.style.display = 'none';
+    document.body.appendChild(element);
+
+    element.click();
+
+    document.body.removeChild(element);
 }
 
 
+    // You will need to define the following functions according to your security needs:
+    // - exportPublicKey(publicKey)
+    // - exportPrivateKey(privateKey)
+    // - sendPublicKeyToServer(pem)
 </script>
-
 
 {% endblock content %}
