--- a/project/canteen/templates/canteen/upload_pub_key.html
+++ b/project/canteen/templates/canteen/upload_pub_key.html
@@ -5,6 +5,6 @@
     <form action="#" method="post">
         {% csrf_token %}
         {{ form }}
-        <button type="submit" class="btn btn-primary mt-2">Submit</button>
+        <button type="submit" class="btn btn-primary mt-2">Upload</button>
     </form>
 {% endblock content %}
