--- a/project/users/templates/users/home.html
+++ b/project/users/templates/users/home.html
@@ -2,7 +2,7 @@
 {% block title %} Home Page {% endblock title%}
 {% block content %}
     <div class="jumbotron">
-        <h1 class="display-4">Vitaj, {{user.first_name.title|default:'návštevník'}}</h1>
+        <h1 class="display-4">Vitaj, {{user.username|default:'návštevník'}}</h1>
         
             {% if user.is_authenticated %}
                 <p class="lead">
