--- a/project/users/templates/users/logout.html
+++ b/project/users/templates/users/logout.html
@@ -1,15 +1,15 @@
 {% extends "users/base.html" %}
 {% block title %}Logout{% endblock title %}
 {% block content %}
-    <div class="card" style="width: 18rem;">
-        <div class="card-body">
-        <h5 class="card-title">Odhlásenie prebehlo úspešne</h5>
-        <p class="card-text">
-            Ako odhlásený používateľ môžete bezpečne zavrieť stránku alebo sa znova prihlásiť
+    <div class="jumbotron">
+        <h1 class="display-4">Odhlásenie prebehlo úspešne</h1>
+        <p class="lead">
+            Pred používaním aplikácie je potrebné prihlásenie
         </p>
-        <br><hr><a href="{% url 'login' %}" class="btn btn-primary">Znova sa prihlásiť</a>
-        </div>
+        <hr class="my-4">
+        <p class="lead">
+            <a href="{% url 'login' %}" class="btn btn-primary">Znova sa prihlásiť</a>
+        </p>
     </div>
-
 
 {% endblock content %}
