--- a/project/users/templates/users/base.html
+++ b/project/users/templates/users/base.html
@@ -24,6 +24,9 @@
                     <li class="nav-item">
                         <a href="{% url 'users-home' %}" class="nav-link">Home</a>
                     </li>
+                    <li class="nav-item">
+                        <a href="{% url 'menu' %}" class="nav-link">Meals menu</a>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarEncryptionMenu" data-toggle="dropdown"
                            aria-haspopup="true" aria-expanded="false">
