--- a/project/users/templates/users/base.html
+++ b/project/users/templates/users/base.html
@@ -58,9 +58,9 @@
             </nav>
             <!--Any flash messages pop up in any page because this is the base template-->
             {% if messages %}
-                <div class="alert alert-dismissible" role="alert">
+                <div class="alert alert-dismissible mb-0" role="alert">
                     {% for message in messages %}
-                        <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+                        <div class="alert alert-{{ message.tags }} mb-0">{{ message }}</div>
                     {% endfor %}
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
