--- a/project/canteen/templates/canteen/orders_list.html
+++ b/project/canteen/templates/canteen/orders_list.html
@@ -2,21 +2,35 @@
 {% block title %} Orders list {% endblock title %}
 {% block content %}
     <div class="card p-2">
-        <h1 class="border-bottom">My orders</h1>
+        <h1 class="border-bottom mb-3">My orders</h1>
         {% if unpaid_order %}
             <h3 class="border-bottom">Pending Order</h3>
             <div class="card p-2">
-            {% for meal in unpaid_order.data %}
-            	<h5>{{ meal.meal__name }}</h5>
+                {% for meal in unpaid_order.data %}
+                <h5>{{ meal.meal__name }}</h5>
                 <div class="mb-3">
                     <div>
-                    Unit Price: {{ meal.meal__price }}€
+                    Unit Price: {{ meal.meal__price|floatformat:2 }}€
                     Quantity: {{ meal.quantity }}
                     </div>
-                    <div>Price: {{ meal.meal_total_price }}€</div>
+                    <div>Price: {{ meal.meal_total_price|floatformat:2 }}€</div>
                 </div>
-            {% endfor %}
-            <p class="border-top">Total Price: <b>{{ unpaid_order.total_price }}</b>€</p>
+                {% endfor %}
+                <div class="border-top">
+                    Total Price: <b>{{ unpaid_order.total_price|floatformat:2 }}</b>€<br>
+
+                    <form action="#" method="post">
+                    {% csrf_token %}
+                     {{ unpaid_order.form }}
+                    <div><button type="submit" class="btn btn-success mt-2">Pay For Order</button></div>
+                    </form>
+
+                    <form action="{% url 'order-delete' %}" method="post">
+                    {% csrf_token %}
+                     {{ unpaid_order.form }}
+                    <div><button type="submit" class="btn btn-danger mt-2">Delete Order</button></div>
+                    </form>
+                </div>
             </div>
         {% endif %}
     </div>
