--- a/project/users/templates/users/base.html
+++ b/project/users/templates/users/base.html
@@ -28,7 +28,7 @@
                         <a href="{% url 'menu' %}" class="nav-link">Meals menu</a>
                     </li>
                     <li class="nav-item">
-                        <a href="{% url 'orders' %}" class="nav-link">My orders</a>
+                        <a href="{% url 'orders-list' %}" class="nav-link">My orders</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarEncryptionMenu" data-toggle="dropdown"
