--- a/project/canteen/templates/canteen/review_list.html
+++ b/project/canteen/templates/canteen/review_list.html
@@ -1,13 +1,13 @@
 {% extends "users/base.html" %}
-{% block title %} Reviews {% endblock title %}
+{% block title %} Reviews for {{ meal.name }} {% endblock title %}
 {% block content %}
     <div class="card p-2">
-        <h1 class="border-bottom">Reviews</h1>
+        <h1 class="border-bottom">Reviews for {{ meal.name }}</h1>
         <div class="">
             {% for review in reviews %}
                 <div class="card p-3 m-1 bg-white rounded">
-                     <h3>{{ review.meal.name }}</h3>
-                     <p>Stars: {{ review.stars }}</p>
+                     <h3>{{ review.user.username }}</h3>
+                     <p>Stars: {{ review.stars }} / 5</p>
                      <p>Comment: {{ review.comment }}</p>
                 </div>
             {% endfor %}
