--- a/project/canteen/templates/canteen/meals_menu.html
+++ b/project/canteen/templates/canteen/meals_menu.html
@@ -3,6 +3,14 @@
 {% block content %}
     <div class="card p-2">
         <h1 class="border-bottom">Menu</h1>
+        <form method="GET" action="{% url 'menu' %}">
+            <div class="form-group">
+                <input class="form-control" type="text" name="q" placeholder="Search meals..." value="{{ request.GET.q }}">
+            </div>
+            <div class="form-group">
+                <button class="btn btn-primary" type="submit">Search</button>
+            </div> 
+        </form>
         <div class="">
             {% for meal in mealsList %}
                 <div class="card p-3 m-1 bg-white rounded">
