feat: added invoices for orders

--- a/project/canteen/templates/canteen/orders_list.html
+++ b/project/canteen/templates/canteen/orders_list.html
@@ -54,6 +54,11 @@
                 <div class="border-top">
                     Total Price: <b>{{ paid_order.total_price|floatformat:2 }}</b>€<br>
                 </div>
+                <div>
+                    <a href="{% url 'invoice' paid_order.data.0.order_id %}">
+                        <button class="btn btn-success mt-2">PDF Invoice</button>
+                    </a>
+                </div>
             </div>
             {% endfor %}
         {% endif %}
