refactor: allow only one review per meal and person, allow editing, make design changes

--- a/project/canteen/templates/canteen/meal_detail.html
+++ b/project/canteen/templates/canteen/meal_detail.html
@@ -4,13 +4,13 @@
     <div class="card p-2">
         <h1 class="border-bottom">Meal order</h1>
         <div class="card p-2">
-            <h3>Meal: {{ meal.name }}</h3>
-            <p>Price: <b>{{ meal.price }}</b>€</p>
+            <h3>{{ meal.name }}</h3>
+            <p>Price: {{ meal.price }}€</p>
 
             <form action="#" method="post">
                 {% csrf_token %}
                  {{ form }}
-                <div><button type="submit" class="btn btn-primary mt-2">Place Order</button></div>
+                <div><button type="submit" class="btn btn-success mt-2">Add to My Orders</button></div>
             </form>
         </div>
     </div>
