--- a/project/canteen/templates/canteen/orders_list.html
+++ b/project/canteen/templates/canteen/orders_list.html
@@ -10,7 +10,7 @@
                 <h5>{{ meal.meal__name }}</h5>
                 <div class="mb-3">
                     <div>
-                    Unit Price: {{ meal.meal__price|floatformat:2 }}€
+                    Unit Price: {{ meal.meal__price|floatformat:2 }}€,
                     Quantity: {{ meal.quantity }}
                     </div>
                     <div>Price: {{ meal.meal_total_price|floatformat:2 }}€</div>
@@ -45,7 +45,7 @@
                 <h5>{{ meal.meal__name }}</h5>
                 <div class="mb-3">
                     <div>
-                    Unit Price: {{ meal.meal__price|floatformat:2 }}€
+                    Unit Price: {{ meal.meal__price|floatformat:2 }}€,
                     Quantity: {{ meal.quantity }}
                     </div>
                     <div>Price: {{ meal.meal_total_price|floatformat:2 }}€</div>
