--- a/project/canteen/templates/canteen/leave_review.html
+++ b/project/canteen/templates/canteen/leave_review.html
@@ -2,10 +2,9 @@
 {% block title %} Leave a review {% endblock title %}
 {% block content %}
     <div class="card p-2">
-        <h1 class="border-bottom">Leave a Review for {{ meal.name }}</h1>
+        <h1 class="border-bottom">Leave a Review</h1>
         <div class="card p-3 m-1 bg-white rounded">
             <h3>{{ meal.name }}</h3>
-            <p>Price: {{ meal.price }}</p>
 
             <form method="post" class="mt-3">
                 {% csrf_token %}
