triv: make minor changes

--- a/project/canteen/templates/canteen/orders_list.html
+++ b/project/canteen/templates/canteen/orders_list.html
@@ -56,7 +56,7 @@
                 </div>
                 <div>
                     <a href="{% url 'invoice' paid_order.data.0.order_id %}">
-                        <button class="btn btn-success mt-2">PDF Invoice</button>
+                        <button class="btn btn-danger mt-2">Download PDF Invoice</button>
                     </a>
                 </div>
             </div>
